--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -21,6 +21,14 @@ stages:
         - job: make_build 
           steps:
             - checkout: pagopaEcommerceCommons
+            - task: Cache@2
+              inputs:
+                key: 'maven | "$(Agent.OS)" | pom.xml'
+                restoreKeys: |
+                  maven | "$(Agent.OS)"
+                  maven
+                path: $(MAVEN_CACHE_FOLDER)
+              displayName: Cache Maven local repo
             - task: Maven@3
               inputs:
                 mavenPomFile: 'pom.xml'
@@ -37,6 +45,14 @@ stages:
       jobs: 
         - job: make_buildEndUnitTest
           steps:
+            - task: Cache@2
+              inputs:
+                key: 'maven | "$(Agent.OS)" | pom.xml'
+                restoreKeys: |
+                  maven | "$(Agent.OS)"
+                  maven
+                path: $(MAVEN_CACHE_FOLDER)
+              displayName: Cache Maven local repo
             - task: SonarCloudPrepare@1
               displayName: 'Prepare SonarCloud analysis configuration'
               inputs:
@@ -52,6 +68,7 @@ stages:
             - task: Maven@3
               inputs:
                 mavenPomFile: 'pom.xml'
+                options: '$(MAVEN_OPTS)'
                 mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
                 javaHomeOption: 'JDKVersion'
                 jdkVersionOption: '17'
