--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -15,77 +15,73 @@ resources:
       ref: main
       endpoint: 'io-azure-devops-github-ro'
 
-stages:
-    - stage: BuildPagopaEcommerceCommons
-      jobs: 
-        - job: make_build 
-          steps:
-            - checkout: pagopaEcommerceCommons
-            - task: Cache@2
-              inputs:
-                key: 'maven | "$(Agent.OS)" | pom.xml'
-                restoreKeys: |
-                  maven | "$(Agent.OS)"
-                  maven
-                path: $(MAVEN_CACHE_FOLDER)
-              displayName: Cache Maven local repo
-            - task: Maven@3
-              inputs:
-                mavenPomFile: 'pom.xml'
-                mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
-                javaHomeOption: 'JDKVersion'
-                jdkVersionOption: '17'
-                jdkArchitectureOption: 'x64'
-                publishJUnitResults: false
-                testResultsFiles: '**/surefire-reports/TEST-*.xml'
-                goals: 'clean install'
-                sonarQubeRunAnalysis: false
-    - stage: BuildPagopaEcommerceSchedulerService
-      dependsOn: [BuildpagopaEcommerceCommons]
-      jobs: 
-        - job: make_buildEndUnitTest
-          steps:
-            - task: Cache@2
-              inputs:
-                key: 'maven | "$(Agent.OS)" | pom.xml'
-                restoreKeys: |
-                  maven | "$(Agent.OS)"
-                  maven
-                path: $(MAVEN_CACHE_FOLDER)
-              displayName: Cache Maven local repo
-            - task: SonarCloudPrepare@1
-              displayName: 'Prepare SonarCloud analysis configuration'
-              inputs:
-                SonarCloud: '$(SONARCLOUD_SERVICE_CONN)'
-                organization: '$(SONARCLOUD_ORG)'
-                scannerMode: Other
-                extraProperties: |
-                  sonar.projectKey=$(SONARCLOUD_PROJECT_KEY)
-                  sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
-                  sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
-                  sonar.junit.reportPaths=target/surefire-reports/
-  
-            - task: Maven@3
-              inputs:
-                mavenPomFile: 'pom.xml'
-                options: '$(MAVEN_OPTS)'
-                mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
-                javaHomeOption: 'JDKVersion'
-                jdkVersionOption: '17'
-                jdkArchitectureOption: 'x64'
-                publishJUnitResults: false
-                testResultsFiles: '**/surefire-reports/TEST-*.xml'
-                goals: 'clean verify'
-                sonarQubeRunAnalysis: true
-  
-            - task: SonarCloudPublish@1
-              displayName: 'Publish SonarCloud results on build summary'
-              inputs:
-                pollingTimeoutSec: '300'
-  
-            - task: PublishCodeCoverageResults@1
-              inputs:
-                codeCoverageTool: 'JaCoCo'
-                summaryFileLocation: 'target/site/jacoco/jacoco.xml'
-                reportDirectory: 'target/site/jacoco'
-              displayName: 'Publish Code Coverage on Azure Devops'
+
+jobs: 
+  - job: make_build_pagopa_commons 
+    steps:
+      - checkout: pagopaEcommerceCommons
+      - task: Cache@2
+        inputs:
+          key: 'maven | "$(Agent.OS)" | pom.xml'
+          restoreKeys: |
+            maven | "$(Agent.OS)"
+            maven
+          path: $(MAVEN_CACHE_FOLDER)
+        displayName: Cache Maven local repo
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '17'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: false
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'clean install'
+          sonarQubeRunAnalysis: false
+  - job: make_build_pagopa_scheduler
+    steps:
+      - task: Cache@2
+        inputs:
+          key: 'maven | "$(Agent.OS)" | pom.xml'
+          restoreKeys: |
+            maven | "$(Agent.OS)"
+            maven
+          path: $(MAVEN_CACHE_FOLDER)
+        displayName: Cache Maven local repo
+      - task: SonarCloudPrepare@1
+        displayName: 'Prepare SonarCloud analysis configuration'
+        inputs:
+          SonarCloud: '$(SONARCLOUD_SERVICE_CONN)'
+          organization: '$(SONARCLOUD_ORG)'
+          scannerMode: Other
+          extraProperties: |
+            sonar.projectKey=$(SONARCLOUD_PROJECT_KEY)
+            sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
+            sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
+            sonar.junit.reportPaths=target/surefire-reports/
+
+      - task: Maven@3
+        inputs:
+          mavenPomFile: 'pom.xml'
+          options: '$(MAVEN_OPTS)'
+          mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+          javaHomeOption: 'JDKVersion'
+          jdkVersionOption: '17'
+          jdkArchitectureOption: 'x64'
+          publishJUnitResults: false
+          testResultsFiles: '**/surefire-reports/TEST-*.xml'
+          goals: 'clean verify'
+          sonarQubeRunAnalysis: true
+
+      - task: SonarCloudPublish@1
+        displayName: 'Publish SonarCloud results on build summary'
+        inputs:
+          pollingTimeoutSec: '300'
+
+      - task: PublishCodeCoverageResults@1
+        inputs:
+          codeCoverageTool: 'JaCoCo'
+          summaryFileLocation: 'target/site/jacoco/jacoco.xml'
+          reportDirectory: 'target/site/jacoco'
+        displayName: 'Publish Code Coverage on Azure Devops'
