--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -40,6 +40,7 @@ jobs:
           goals: 'clean install'
           sonarQubeRunAnalysis: false
   - job: make_build_pagopa_scheduler
+    dependsOn : 'make_build_pagopa_commons'
     steps:
       - task: Cache@2
         inputs:
