--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -19,6 +19,7 @@ resources:
 jobs: 
   - job: make_build
     steps:
+      - checkout: self
       - script: 'ls'
       - task: Cache@2
         inputs:
