--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -20,6 +20,7 @@ jobs:
   - job: make_build
     steps:
       - checkout: pagopaEcommerceCommons
+      - checkout: self
       - script: 'ls'
       - task: Cache@2
         inputs:
