--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -1,6 +1,9 @@
 variables:
-  MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
-  MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
+  - MAVEN_CACHE_FOLDER: $(Pipeline.Workspace)/.m2/repository
+  - MAVEN_OPTS: '-Dmaven.repo.local=$(MAVEN_CACHE_FOLDER)'
+  - PAGOPA_COMMONS_VERSION: 'commons_version' 
+    value: '0.0.1'
+  
 
 trigger: none
 
@@ -19,8 +22,10 @@ resources:
 jobs: 
   - job: make_buildEndUnitTest
     steps:
+      - script: echo($(commons_version))
+      - script: echo "##vso[task.setvariable variable=commons_version]0.0.2"
+      - script: echo($(commons_version))
       - checkout: pagopaEcommerceCommons
-      - script: 'ls'
       - checkout: self
       - task: Cache@2
         inputs:
