Feat: added script

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -21,9 +21,11 @@ resources:
 jobs: 
   - job: make_buildEndUnitTest
     steps:
-      - script: mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout 
-      - script: echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout"
-      - script: echo $(PAGOPA_COMMONS_VERSION)
+      - script: | 
+         VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
+         echo "${OUTPUT}"
+         echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]${OUTPUT}"
+         echo "${PAGOPA_COMMONS_VERSION}"
       - checkout: pagopaEcommerceCommons
       - checkout: self
       - task: Cache@2
