Fix : variable script name

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -22,9 +22,9 @@ jobs:
   - job: make_buildEndUnitTest
     steps:
       - script: | 
-         VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
-         echo "${OUTPUT}"
-         echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]${OUTPUT}"
+         COMMONS_VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
+         echo "${COMMONS_VERSION}"
+         echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]${COMMONS_VERSION}"
          echo "${PAGOPA_COMMONS_VERSION}"
       - checkout: pagopaEcommerceCommons
       - checkout: self
