Fix : added dbug

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -21,7 +21,9 @@ resources:
 jobs: 
   - job: make_buildEndUnitTest
     steps:
+      - checkout: self
       - script: | 
+         ls
          COMMONS_VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
          echo "${COMMONS_VERSION}"
          echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]${COMMONS_VERSION}"
