--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -9,25 +9,17 @@ trigger: none
 pool:
   vmImage: ubuntu-latest
 
-resources:
-  repositories:
-    - repository: pagopaEcommerceCommons
-      type: github
-      name: pagopa/pagopa-ecommerce-commons 
-      ref: refs/tags/0.0.1
-      endpoint: 'io-azure-devops-github-ro'
-
-
 jobs: 
   - job: make_buildEndUnitTest
     steps:
       - script: | 
          ls
+         cd pagopa-ecommerce-scheduler-service
          COMMONS_VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
          echo "${COMMONS_VERSION}"
          echo "##vso[task.setvariable variable=PAGOPA_COMMONS_VERSION]${COMMONS_VERSION}"
          echo "${PAGOPA_COMMONS_VERSION}"
-      - checkout: pagopaEcommerceCommons
+      - checkout: git://pagopa/pagopa-ecommerce-commons@refs/tags/${PAGOPA_COMMONS_VERSION}
       - checkout: self
       - task: Cache@2
         inputs:
