Fix : ${COMMONS_VERSION}

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -12,13 +12,11 @@ jobs:
     steps:
       - checkout: self
       - script: | 
-         ls
          COMMONS_VERSION=$(mvn help:evaluate -Dexpression=pagopa-ecommerce-commons.version -q -DforceStdout)
          echo "${COMMONS_VERSION}"
          cd .. && git clone https://github.com/pagopa/pagopa-ecommerce-commons.git
          cd pagopa-ecommerce-commons
-         git checkout refs/tags/COMMONS_VERSION && cd ..
-         ls
+         git checkout refs/tags/${COMMONS_VERSION} && cd ..
       - task: Cache@2
         inputs:
           key: 'maven | "$(Agent.OS)" | pagopa-ecommerce-scheduler-service/pom.xml'
