Fix: added ls for debug

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -17,6 +17,8 @@ jobs:
          cd .. && git clone https://github.com/pagopa/pagopa-ecommerce-commons.git
          cd pagopa-ecommerce-commons
          git checkout refs/tags/${COMMONS_VERSION} && cd ..
+         ls
+         pwd
       - task: Cache@2
         inputs:
           key: 'maven | "$(Agent.OS)" | pagopa-ecommerce-scheduler-service/pom.xml'
