Feat: set to false sonarQubeRunAnalysis

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -38,7 +38,7 @@ steps:
       publishJUnitResults: false
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
       goals: 'validate'
-      sonarQubeRunAnalysis: true
+      sonarQubeRunAnalysis: false
   - task: Maven@3
     inputs:
       mavenPomFile: 'pom.xml'
