CHK 834 added plugin for commons library (#19)
* Feat : added pagopa-ecommerce-commons dependency into pom

* Feat: added maven plugin

* Feat: Added into Dockerfile and code review pipeline the maven validate for the library.

* Feat: set to false sonarQubeRunAnalysis

* Feat: added displayName for maven task into code review pipeline

* Fix: removed clean into mvn install

* Fix: removed format line

* Fix: format

* Update pom.xml

* Revert "Feat : added pagopa-ecommerce-commons dependency into pom"

This reverts commit 96400732b1fbcc618f2a52293272f47584419179.

* Fix: removed space

* Fix : changed branch name openApi

Co-authored-by: Simone infante <52280205+infantesimone@users.noreply.github.com>

--- a/.devops/code-review-pipelines.yml
+++ b/.devops/code-review-pipelines.yml
@@ -28,7 +28,18 @@ steps:
         sonar.projectName=$(SONARCLOUD_PROJECT_NAME)
         sonar.coverage.jacoco.xmlReportPaths=./target/site/jacoco/jacoco.xml
         sonar.junit.reportPaths=target/surefire-reports/
-
+  - task: Maven@3
+    inputs:
+      mavenPomFile: 'pom.xml'
+      mavenOptions: '-Xmx3072m $(MAVEN_OPTS)'
+      javaHomeOption: 'JDKVersion'
+      jdkVersionOption: '17'
+      jdkArchitectureOption: 'x64'
+      publishJUnitResults: false
+      testResultsFiles: '**/surefire-reports/TEST-*.xml'
+      goals: 'validate'
+      sonarQubeRunAnalysis: false
+    displayName: "Maven validate"
   - task: Maven@3
     inputs:
       mavenPomFile: 'pom.xml'
@@ -40,7 +51,7 @@ steps:
       testResultsFiles: '**/surefire-reports/TEST-*.xml'
       goals: 'clean verify'
       sonarQubeRunAnalysis: true
-
+    displayName: "Maven clean verify"
   - task: SonarCloudPublish@1
     displayName: 'Publish SonarCloud results on build summary'
     inputs:
