--- a/pom.xml
+++ b/pom.xml
@@ -398,8 +398,8 @@
 				<version>2.0.0-M3</version>
 				<configuration>
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
-					<scmVersionType>tag</scmVersionType>
-					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
+					<scmVersionType>branch</scmVersionType>
+					<scmVersion>disable-autogen-docs</scmVersion>
 					<goals>install</goals>
 				</configuration>
 				<executions>
