--- a/pom.xml
+++ b/pom.xml
@@ -397,6 +397,7 @@
 				<artifactId>maven-scm-plugin</artifactId>
 				<version>2.0.0-M3</version>
 				<configuration>
+					<skipCheckoutIfExists>true</skipCheckoutIfExists>
 					<connectionUrl>scm:git:https://github.com/pagopa/pagopa-ecommerce-commons.git</connectionUrl>
 					<scmVersionType>tag</scmVersionType>
 					<scmVersion>${pagopa-ecommerce-commons.version}</scmVersion>
