--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT=10000
 PAYMENT_TRANSACTIONS_GATEWAY_CONNECTION_TIMEOUT=10000
 
 NODO_CONNECTION_STRING="{\"idPSP\":\"idPsp\",\"idChannel\":\"idChannel\",\"idBrokerPSP\":\"idBrokerPsp\",\"password\":\"password\"}"
-NODO_URI="http://127.0.0.1:3002"
+NODO_URI="http://127.0.0.1:3002/nodo-per-pm/v2"
 NODO_READ_TIMEOUT=10000
 NODO_CONNECTION_TIMEOUT=10000
 
