--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 		<kotlinx-coroutines.version>1.6.2</kotlinx-coroutines.version>
 		<spring-cloud-azure.version>4.0.0</spring-cloud-azure.version>
 		<jacoco.version>0.8.8</jacoco.version>
-		<pagopa-ecommerce-commons.version>0.0.3</pagopa-ecommerce-commons.version>
+		<pagopa-ecommerce-commons.version>0.1.1</pagopa-ecommerce-commons.version>
 		<sonar.coverage.exclusions> <!-- the members of the following list should be in the same line -->
 			**/it/pagopa/transactions/**
 		</sonar.coverage.exclusions>
@@ -166,6 +166,13 @@
 			<artifactId>pagopa-ecommerce-commons</artifactId>
 			<version>${pagopa-ecommerce-commons.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>it.pagopa</groupId>
+			<artifactId>pagopa-ecommerce-commons</artifactId>
+			<version>${pagopa-ecommerce-commons.version}</version>
+			<type>test-jar</type>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
@@ -287,26 +294,6 @@
 							<generateSupportingFiles>true</generateSupportingFiles>
 							<modelPackage>it.pagopa.generated.ecommerce.nodo.v2.dto</modelPackage>
 							<apiPackage>it.pagopa.generated.ecommerce.nodo.v2.api</apiPackage>
-							<modelNameSuffix>dto</modelNameSuffix>
-						</configuration>
-					</execution>
-					<execution>
-						<id>transactions-api</id>
-						<goals>
-							<goal>generate</goal>
-						</goals>
-						<configuration>
-							<inputSpec>
-								https://raw.githubusercontent.com/pagopa/pagopa-ecommerce-transactions-service/main/api-spec/transactions-api.yaml
-							</inputSpec>
-							<generatorName>java</generatorName>
-							<library>webclient</library>
-							<generateApiDocumentation>false</generateApiDocumentation>
-							<generateApiTests>false</generateApiTests>
-							<generateModelTests>false</generateModelTests>
-							<generateSupportingFiles>true</generateSupportingFiles>
-							<modelPackage>it.pagopa.generated.transactions.server.model</modelPackage>
-							<apiPackage>it.pagopa.generated.transactions.server.api</apiPackage>
 							<modelNameSuffix>dto</modelNameSuffix>
 						</configuration>
 					</execution>
