--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -25,11 +25,13 @@ microservice-chart:
   service:
     create: true
     type: ClusterIP
-    port: 9000
+    ports:
+    - 9000
   ingress:
     create: true
     host: "weudev.ecommerce.internal.dev.platform.pagopa.it"
     path: /pagopa-ecommerce-scheduler-service/(.*)
+    servicePort: 9000
   serviceAccount:
     create: false
     annotations: {}
@@ -67,6 +69,7 @@ microservice-chart:
           targetValue: "30"
   envConfig:
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-activated-events-queue
+    TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-closed-events-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -90,4 +93,12 @@ microservice-chart:
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
   nodeSelector: {}
   tolerations: []
-  affinity: {}
+  affinity:
+    nodeAffinity:
+      requiredDuringSchedulingIgnoredDuringExecution:
+        nodeSelectorTerms:
+          - matchExpressions:
+              - key: node_type
+                operator: In
+                values:
+                  - user
