--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<sonar.coverage.exclusions> <!-- the members of the following list should be in the same line -->
 			**/it/pagopa/transactions/**
 		</sonar.coverage.exclusions>
+		<spotless.version>2.28.0</spotless.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -401,6 +402,56 @@
 						<goals>
 							<goal>bootstrap</goal>
 						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>com.diffplug.spotless</groupId>
+				<artifactId>spotless-maven-plugin</artifactId>
+				<version>${spotless.version}</version>
+				<configuration>
+					<formats>
+						<!-- you can define as many formats as you want, each is independent -->
+						<format>
+							<!-- define the files to apply to -->
+							<includes>
+								<include>*.md</include>
+								<include>.gitignore</include>
+							</includes>
+							<!-- define the steps to apply to those files -->
+							<trimTrailingWhitespace/>
+							<endWithNewline/>
+							<indent>
+								<tabs>true</tabs>
+								<spacesPerTab>4</spacesPerTab>
+							</indent>
+						</format>
+					</formats>
+					<!-- define a language-specific format -->
+					<java>
+						<toggleOffOn/>
+						<eclipse>
+							<file>${project.basedir}/eclipse-style.xml</file>
+						</eclipse>
+						<trimTrailingWhitespace/>
+						<endWithNewline/>
+					</java>
+					<kotlin>
+						<toggleOffOn/>
+						<ktfmt>
+							<version>0.39</version> <!-- optional -->
+							<style>DEFAULT</style> <!-- optional, other options are DROPBOX, GOOGLE and KOTLINLANG -->
+						</ktfmt>
+						<trimTrailingWhitespace/>
+						<endWithNewline/>
+					</kotlin>
+				</configuration>
+				<executions>
+					<execution>
+						<goals>
+							<goal>check</goal>
+						</goals>
+						<phase>compile</phase>
 					</execution>
 				</executions>
 			</plugin>
