--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -71,6 +71,7 @@ microservice-chart:
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-activated-events-queue
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-closed-events-queue
     TRANSACTION_EXPIRED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-expired-events-queue
+    TRANSACTIONS_REFUND_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
