--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -71,6 +71,7 @@ microservice-chart:
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-activated-events-queue
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-closed-events-queue
     TRANSACTION_EXPIRED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-expired-events-queue
+    TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -89,6 +90,8 @@ microservice-chart:
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
+    QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
+    REFUND_RETRY_EVENT_OFFSET_SECONDS: 60
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
