--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVEN
 azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionexpiredevents.name=${TRANSACTION_EXPIRED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionrefundretry.name=${TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionclosepaymentretry.name=${TRANSACTION_CLOSE_PAYMENT_RETRY_EVENT_QUEUE_NAME}
 azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
 spring.cloud.azure.storage.queue.account-key=${ECOMMERCE_STORAGE_QUEUE_KEY}
 spring.cloud.azure.storage.queue.account-name=${ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME}
@@ -24,3 +25,6 @@ management.endpoint.health.probes.enabled=true
 
 refundRetry.eventOffsetSeconds=${REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS}
 refundRetry.maxAttempts=${REFUND_RETRY_EVENT_MAX_ATTEMPTS}
+
+closePaymentRetry.eventOffsetSeconds=${CLOSE_PAYMENT_RETRY_EVENT_OFFSET_SECONDS}
+closePaymentRetry.maxAttempts=${CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS}
