--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -71,6 +71,7 @@ microservice-chart:
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-activated-events-queue
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-closed-events-queue
     TRANSACTION_EXPIRED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-expired-events-queue
+    TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -84,11 +85,14 @@ microservice-chart:
     MONGO_SSL_ENABLED: "true"
     ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopadweuecommercesa
     ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopadweuecommercesa.queue.core.windows.net/pagopadweuecommercesa
+    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
+    REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
     APPLICATIONINSIGHTS_CONNECTION_STRING: applicationinsights-connection-string
+    QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
   keyvault:
     name: "pagopa-d-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
