--- a/helm/values-uat.yaml
+++ b/helm/values-uat.yaml
@@ -20,6 +20,7 @@ microservice-chart:
       TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-activated-events-queue
       TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-closed-events-queue
       TRANSACTION_EXPIRED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-expired-events-queue
+      TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-retry-queue
       AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
       PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway
       PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -33,10 +34,13 @@ microservice-chart:
       MONGO_SSL_ENABLED: "true"
       ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
       ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
+      REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
+      REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
     envSecret:
       ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
       MONGO_PASSWORD: mongo-ecommerce-password
       NODO_CONNECTION_STRING: nodo-connection-string
+      QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
   image:
     repository: pagopaucommonacr.azurecr.io/pagopaecommerceschedulerservice
     tag: "latest"
@@ -103,6 +107,7 @@ microservice-chart:
   envConfig:
     TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-activated-events-queue
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-closed-events-queue
+    TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME: pagopa-u-weu-ecommerce-transactions-refund-retry-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.uat.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -116,10 +121,13 @@ microservice-chart:
     MONGO_SSL_ENABLED: "true"
     ECOMMERCE_STORAGE_QUEUE_ACCOUNT_NAME: pagopauweuecommercesa
     ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopauweuecommercesa.queue.core.windows.net/pagopauweuecommercesa
+    REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
+    REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
     NODO_CONNECTION_STRING: nodo-connection-string
+    QUEUE_CONNECTION_STRING: ecommerce-storage-connection-string
   keyvault:
     name: "pagopa-u-ecommerce-kv"
     tenantId: "7788edaf-0346-4068-9d79-c868aed15b3d"
