--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 azurestorage.queues.transactionactivatedevents.name=${TRANSACTION_ACTIVATED_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionclosuresentevents.name=${TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME}
 azurestorage.queues.transactionexpiredevents.name=${TRANSACTION_EXPIRED_EVENT_QUEUE_NAME}
+azurestorage.queues.transactionsrefund.name=${TRANSACTIONS_REFUND_QUEUE_NAME}
 azurestorage.queues.transactionrefundretry.name=${TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME}
 azurestorage.connectionstring=${QUEUE_CONNECTION_STRING}
 
