--- a/helm/values-dev.yaml
+++ b/helm/values-dev.yaml
@@ -72,6 +72,7 @@ microservice-chart:
     TRANSACTION_CLOSURE_SENT_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-closed-events-queue
     TRANSACTION_EXPIRED_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-expired-events-queue
     TRANSACTION_REFUND_RETRY_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-refund-retry-queue
+    TRANSACTION_CLOSE_PAYMENT_RETRY_EVENT_QUEUE_NAME: pagopa-d-weu-ecommerce-transactions-close-payment-retry-queue
     AUTH_REQUESTED_TIMEOUT_SECONDS: "100"
     PAYMENT_TRANSACTIONS_GATEWAY_URI: https://api.dev.platform.pagopa.it/payment-transactions-gateway
     PAYMENT_TRANSACTIONS_GATEWAY_READ_TIMEOUT: "10000"
@@ -87,6 +88,8 @@ microservice-chart:
     ECOMMERCE_STORAGE_QUEUE_ENDPOINT: https://pagopadweuecommercesa.queue.core.windows.net/pagopadweuecommercesa
     REFUND_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
     REFUND_RETRY_EVENT_MAX_ATTEMPTS: 3
+    CLOSE_PAYMENT_RETRY_EVENT_BASE_INTERVAL_SECONDS: 600
+    CLOSE_PAYMENT_RETRY_EVENT_MAX_ATTEMPTS: 3
   envSecret:
     ECOMMERCE_STORAGE_QUEUE_KEY: ecommerce-storage-account-key
     MONGO_PASSWORD: mongo-ecommerce-password
